--- a/Tienda/templates/base/base.html
+++ b/Tienda/templates/base/base.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../../../../bootstrap/bootstrap-5.3.3-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../../../../bootstrap/bootstrap-5.3.3-dist/css/bootstrap.css">
   <link rel="stylesheet" href="../../../../bootstrap/bootstrap-5.3.3-dist/css/bootstrap.css.map">
-  <link rel="shortcut icon" href="../../../../img/logo.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="../../../img/logo.jpg" type="image/x-icon">
   <title>BinaryCell</title>
 
 </head>
