--- a/Tienda/statics/styles.css
+++ b/Tienda/statics/styles.css
@@ -14,7 +14,9 @@
 }
 
 #header{
-    background-color: rgb(0, 0, 0);
+    background-image: url(../../../img/baner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 150px;
     width: 100%;
 }
@@ -25,6 +27,12 @@
     padding: 0;
 }
 
+#titulo{
+    margin-left: -100px;
+    font-size: 60px;
+    color: white;
+}
+
 #img{
     float: left;
 }
@@ -33,13 +41,26 @@
     height: 50px;
 }
 
+#btn2{
+    height: 50px;
+    float: right;
+}
+
 #btnm{
     margin-right: 10px;
+}
+
+#btnm2{
+    margin-left: 10px;
 }
 
 #linkbtn{
     text-decoration: none;
     color: white;
+}
+
+#buscador{
+    filter: drop-shadow(#ffc107);
 }
 
 #cardservi{
