--- a/Tienda/templates/base/base.html
+++ b/Tienda/templates/base/base.html
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../statics/styles.css">
+  <link rel="stylesheet" href="../../statics/style.css">
   <link rel="stylesheet" href="../../../../bootstrap/bootstrap-5.3.3-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../../../../bootstrap/bootstrap-5.3.3-dist/css/bootstrap.css">
   <link rel="stylesheet" href="../../../../bootstrap/bootstrap-5.3.3-dist/css/bootstrap.css.map">
-  <link rel="shortcut icon" href="../../../img/logo.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="../../../../img/logo.jpg" type="image/x-icon">
   <title>BinaryCell</title>
 
 </head>
@@ -24,29 +24,21 @@
             <div class="container text-center">
                 <div class="row">
                   <div class="col-md-4" id="logo">
-                    <img src="img/logo.jpg" id="img" width="100px" height="100px" alt="">
+                    <img src="../../../../img/logo.png" id="img" width="100px" height="100px" alt="">
                   </div>
-                  <div class="col order-5" id="titulo">
-                    <h1 class="text-warning">BinaryCell</h1>
+                  <div class="col order-5">
+                    <h1 id="titulo" class="text-warning">BinaryCell</h1>
                   </div>
                 </div>
               </div>
               <div class="btn-group" id="btn" role="group" aria-label="Basic outlined example">
-                <button id="btnm" type="button" class="btn btn-outline-warning"><a id="linkbtn" href="base.html">inicio</a></button>
-                {% if user.is_authenticated %}
-
-                    {% if user.is_superuser %}
-
-                        <button id="btnm" type="button" class="btn btn-outline-warning"><a id="linkbtn" href="pages/cat.html">Administrar</a></button>
-                    
-                    {% endif %}
-
-                {% else %}
-                    <button id="btnm" type="button" class="btn btn-outline-warning"><a id="linkbtn" href="">contactos</a></button>
-                {% endif %}
-                </div>
-              <div class="btn-group" id="btn" role="group" aria-label="Basic outlined example">
-                <button id="btnm" type="button" class="btn btn-outline-warning"><a id="linkbtn" href=""><img src="img/carrito.png" width="30px" height="30px" alt="" srcset=""></a></button>
+                <button id="btnm" type="button" class="btn btn-outline-warning"><a id="linkbtn" href="base.html"><img src="../../../../img/home.png" width="30px" height="30px" alt=""></a></button>
+                <button id="btnm" type="button" class="btn btn-outline-warning"><a id="linkbtn" href="pages/cat.html">categorias</a></button>
+                <button id="btnm" type="button" class="btn btn-outline-warning"><a id="linkbtn" href="">contactos</a></button>
+              </div>
+              <div class="btn-group" id="btn2" role="group" aria-label="Basic outlined example">
+                <button id="btnm2" type="button" class="btn btn-outline-warning"><a id="linkbtn" href=""><img src="../../../../img/carrito.png" width="30px" height="30px" alt="" srcset=""></a></button>
+                <button id="btnm2" type="button" class="btn btn-outline-warning"><a id="linkbtn" href=""><img src="../../../../img/user.png" width="30px" height="30px" alt=""></a></button>
               </div>
         </div>
 
@@ -68,8 +60,8 @@
             <div class="col">
                 <form method="GET">
                     <div class="input-group">
-                        <input type="text" class="form-control" name="buscador" placeholder="buscar">
-                        <button type="submit" class="btn btn-outline-secondary">BUSCAR</button>
+                        <input type="text" class="form-control" name="buscador" placeholder="Buscar">
+                        <button type="submit" class="btn btn-outline-warning"><img src="../../../../img/lupa.png" id="buscador" width="30px" height="30px" alt=""></button>
                     </div>
                 </form>
             </div>
