--- a/regis.css
+++ b/regis.css
@@ -1,7 +1,7 @@
 #registro{
     background-color: white;
     width: 43.7rem;
-    height: 41rem;
+    height: auto;
     margin-top: 3rem;
     margin-bottom: 3rem;
     margin-left: auto;
